<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PlaceToBe</string>
    <string name="action_settings">Settings</string>
    <string name="action_photo">Photo</string>

    <string-array name="main_nav_array">
        <item>Capturer un media</item>
        <item>Medias autour de moi</item>
        <item>Medias de ceux que je suis</item>
        <item>Historique de media</item>
        <item>Mon compte</item>
        <item>DEBUG User\'s list</item>
        <item>DEBUG Image\'s list</item>
    </string-array>

    <string name="discover_share">Discover | Share | &#8230;</string>
    <string name="drawer_open">Photo</string>
    <string name="drawer_close">Photo</string>
    <string name="action_video">Video</string>
    <string name="action_gallery">Gallery</string>
    <string name="title_activity_publication_activty">PublicationActivty</string>
    <string name="insertComment">Insert comment here !</string>
    <string name="toggleFilter">Toggle filter</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_valid">Valid</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="acount_edittext_search">Search a new followed</string>
    <string name="account_tab_account">Account</string>
    <string name="account_tab_followed">Followed</string>
    <string name="account_tab_followers">Followers</string>
    <string name="account_label_email">Email :</string>
    <string name="account_label_name">Name :</string>
    <string name="account_bt_save">Save</string>
    <string name="account_bt_add">Add a new followed</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="action_toggle">Toggle</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="account_list_followed">List of followed</string>
    <string name="account_list_followers">List of followers</string>
    <string name="title_activity_add_followed">AddFollowedActivity</string>
    <string name="title_activity_users_debug">UsersDebugActivity</string>
    <string name="title_activity_images_debug">ImagesDebugActivity</string>
    <string name="play_services_available">Google Play services is available</string>
    <string name="no_address_found">No address found for location</string>
    <string name="IO_Exception_getFromLocation">IO Exception in Geocoder.getFromLocation()</string>
    <string name="illegal_argument_exception">Illegal arguments: Latitude %1$.8f Longitude %2$.8f</string>
    <string name="address_output_string">%1$s %2$s %3$s</string>
    <string name="connected">Client connected</string>
    <string name="disconnected">Client disconnected</string>
    <string name="location_requested">Periodic updates requested</string>
    <string name="location_updated">Location updated</string>
    <string name="location_updates_stopped">Periodic updates stopped</string>
    <string name="no_geocoder_available">Cannot get address. No geocoder available.</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>
