<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.rae.placetobe.PublicationActivty" >

    <!-- 
   <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
	-->
    
    <item android:id="@+id/action_toggle"
          android:icon="@drawable/ic_color_lens_white_36dp"
          android:title="@string/action_toggle"
          android:showAsAction="always" />

    <item android:id="@+id/action_cancel"
         android:icon="@drawable/ic_delete_white_36dp"
          android:title="@string/action_cancel"
          android:showAsAction="always" />
    
    <item android:id="@+id/action_commit"
         android:icon="@drawable/ic_done_white_36dp"
          android:title="@string/action_valid"
          android:showAsAction="always" />
    
</menu>
