<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.rae.shadowproject.MainActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imageViewPhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/action_photo"
            android:maxHeight="400dp"
            android:src="@drawable/ic_launcher" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:onClick="toggleFilter"
            android:text="@string/toggleFilter" />

        <ImageView
            android:id="@+id/imageViewSeparator"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/imageViewPhoto"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:scaleType="fitXY"
            android:src="@android:drawable/divider_horizontal_textfield" />

        <EditText
            android:id="@+id/editTextComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/imageViewSeparator"
            android:background="@null"
            android:ems="10"
            android:gravity="start"
            android:hint="@string/insertComment"
            android:inputType="textMultiLine"
            android:lines="6"
            android:minLines="4" >

            <requestFocus />
        </EditText>

    </RelativeLayout>

</LinearLayout>